demo/admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: cedar-validating-webhook
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    url: https://cedar-authorizer:10288/v1/admit
    caBundle: CA_BUNDLE_CONTENT
  failurePolicy: Ignore
  name: vpolicy.cedar.k8s.aws
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
    - configmaps
    - secrets
    - serviceaccounts
  sideEffects: None
  timeoutSeconds: 30
